--- a/.env
+++ b/.env
@@ -21,16 +21,17 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite  # This should point to your SQLite file
+# The following are not necessary for SQLite, so we remove them:
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
-SESSION_PATH=/
+SESSION_PATH=/ 
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
